运维脚本修改